fix: remove nav spacing

--- a/frontend/components/Nav/Nav.css
+++ b/frontend/components/Nav/Nav.css
@@ -1,6 +1,5 @@
 .nav {
   border-top: 1px solid #293547;
-  padding: 10px;
 }
 
 .children {
